<resources>
    <string name="app_name">Transter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="get_started">Get Started!</string>
    <string name="logo">LOGO</string>
    <string name="logout">Logout</string>
    <string name="set_up_profile">Set up profile.</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help!</string>
</resources>
