<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@drawable/maps_icon_direction"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/maps_icon_direction"
            android:title="@string/help" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings"
            android:title="@string/logout" />
    </group>


</menu>
